1998-06-28  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* gnome-scores.c: Included 'gnome-i18nP.h' instead of 'gnome-i18n.h'.

1998-06-24  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-init.c: Add a new argument handled by Gtk+.  Reindent.

1998-06-23  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.[ch]: new member child_menu_label and function
	for setting it, so MDI doesn't always display Children.

Sun Jun 21 15:09:04 CEST 1998  Eckehard Berns  <eb@berns.pirma.de>

	* gnome-pixmap.[ch] (gnome_pixmap_new_from_imlib): new function
	(gnome_pixmap_new_from_imlib_at_size): new function
	(gnome_pixmap_load_imlib): new function
	(gnome_pixmap_load_imlib_at_size): new function
	(finish_load): changed to accept `int destroy', which determines
	whether the GdkImlibImage should be destroyed or not.

	The new functions make it possible to pass valid GdkImlibImages for
	GnomePixmap creations/updates.

1998-06-20  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-icon-list.c: Fixed bug where it would crash if you clicked
	on an empty icon list.  Thanks to James Henstridge
	<james@quoll.daa.com.au> for the patch.

Thu Jun 18 23:52:04 1998  George Lebl  <jirka@5z.com>

	* gnome-init.c: set up config autosyncing during gnome_init

	* gnome-entry.c: don't sync every time we want to do a set,
	  we can realy on the autosync to do it for us, this should
	  reduce cpuusage.

1998-06-18  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-number-entry.c: Fixup includes.

1998-06-18  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
 	
	* gnome-app-helper.c: changed gnome_app_add_[radio|help]_menu_entries() to
	return new pos so that insertion works properly.
	
Thu Jun 18 02:47:26 1998  George Lebl  <jirka@5z.com>

	* gnome-number-entry.[ch]: new entry type modeled after file
	  entry, but for numbers. has a "browse" dialog with a
	  calculator.

	* gnome-calculator.[ch]: add some new functions for more control
